--- a/app/src/main/res/layout/fragment_item_detail_web.xml
+++ b/app/src/main/res/layout/fragment_item_detail_web.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
-    <WebView
-        android:id="@+id/wv_detail"
+    <com.tamic.jswebview.view.ProgressBarWebView
+        android:id="@+id/web_good_detail"
+        style="@style/NumberProgressBar_Default"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"/>
+
 </LinearLayout>
