--- a/app/src/main/res/layout/fragment_store_home.xml
+++ b/app/src/main/res/layout/fragment_store_home.xml
@@ -8,7 +8,7 @@
         android:id="@+id/rv_store_home"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/bg_gray"/>
+        android:paddingBottom="10dp"/>
 
 
 </LinearLayout>
