--- a/app/src/main/res/layout/activity_news_header.xml
+++ b/app/src/main/res/layout/activity_news_header.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="45dp"
     android:background="@color/colorPrimary"
+    android:elevation="3dp"
     app:contentInsetLeft="0dp"
     app:contentInsetStart="0dp">
 
