--- a/app/src/main/res/layout/activity_searchgood_item_grid.xml
+++ b/app/src/main/res/layout/activity_searchgood_item_grid.xml
@@ -1,57 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="2px"
-    android:layout_marginLeft="1px"
-    android:layout_marginRight="1px"
-    android:background="@color/bg_white"
-    android:orientation="vertical">
+    android:background="@color/colorLine"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:padding="10dp">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="1px"
+        android:layout_marginLeft="1px"
+        android:layout_marginRight="1px"
+        android:layout_marginTop="1px"
+        android:background="@color/bg_white"
+        android:padding="5dp">
 
         <ImageView
             android:id="@+id/ivGoodPic"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="fitXY"/>
+            android:layout_height="180dp"
+            android:layout_margin="5dp"
+            />
 
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@color/bg_white"
-        android:paddingBottom="5dp">
 
         <TextView
             android:id="@+id/tv_goods_name"
             style="@style/GoodsNameTextView"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
+            android:layout_below="@id/ivGoodPic"
             android:layout_marginTop="10dp"
+            android:ellipsize="end"
             android:letterSpacing="0.01"
-            android:lineSpacingExtra="3dp"/>
+            android:lineSpacingExtra="3dp"
+            android:maxLines="2"/>
 
         <TextView
             android:id="@+id/tv_goods_price"
             style="@style/GoodsPriceTextView"
-            android:layout_alignParentBottom="true" />
+            android:layout_below="@id/tv_goods_name"
+            android:layout_marginTop="8dp"/>
 
         <TextView
             android:id="@+id/tv_goods_sellnum"
             style="@style/SmallHintTextView"
-            android:layout_alignParentBottom="true"
-            android:layout_marginLeft="12dp"
-            android:layout_toRightOf="@+id/tv_goods_price" />
+            android:layout_below="@id/tv_goods_name"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_toRightOf="@+id/tv_goods_price"/>
+
+
     </RelativeLayout>
 
-</LinearLayout>
+
+</FrameLayout>
