--- a/app/src/main/res/layout/fragment_good_comment.xml
+++ b/app/src/main/res/layout/fragment_good_comment.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@color/bg_gray"
               android:orientation="vertical">
     <!--底部区域-->
     <include layout="@layout/fragment_good_eva_tab"/>
@@ -16,7 +15,6 @@
         android:id="@+id/good_eva_content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="9"
-        android:background="@color/bg_gray"/>
+        android:layout_weight="9"/>
 
 </LinearLayout>
