--- a/app/src/main/res/layout/fragment_good_recomm.xml
+++ b/app/src/main/res/layout/fragment_good_recomm.xml
@@ -8,6 +8,5 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_recomm"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/bg_gray"/>
+        android:layout_height="match_parent"/>
 </LinearLayout>
