--- a/app/src/main/res/layout/fragment_home_footer.xml
+++ b/app/src/main/res/layout/fragment_home_footer.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@color/bg_gray"
               android:orientation="vertical">
 
     <include
@@ -15,6 +14,6 @@
         android:id="@+id/rv_home_goods"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorLine"/>
+        android:paddingBottom="10dp"/>
 
 </LinearLayout>
