--- a/app/src/main/res/layout/fragment_home_item_expandable.xml
+++ b/app/src/main/res/layout/fragment_home_item_expandable.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
+              android:layout_margin="1px"
               android:gravity="center_vertical"
+              android:background="@color/bg_white"
               android:orientation="vertical">
 
     <ImageView
@@ -18,7 +20,8 @@
         style="@style/NormalTextView"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="12dp"
-        android:layout_marginTop="10dp" />
+
+        android:layout_marginTop="10dp"/>
 
 
 </LinearLayout>
