--- a/app/src/main/res/layout/fragment_home_item_tab_title.xml
+++ b/app/src/main/res/layout/fragment_home_item_tab_title.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="40dp"
+    android:layout_marginTop="3dp"
     android:background="@color/bg_white"
     android:orientation="vertical">
 
