--- a/app/src/main/res/layout/fragment_home_top.xml
+++ b/app/src/main/res/layout/fragment_home_top.xml
@@ -32,9 +32,7 @@
 
 
     <View
-        android:layout_width="match_parent"
-        android:layout_height="3px"
-        android:background="@color/colorLine"/>
+       style="@style/XYLine"/>
 
     <RelativeLayout
         android:id="@+id/rl_home_news"
