--- a/app/src/main/res/layout/fragment_service_goods.xml
+++ b/app/src/main/res/layout/fragment_service_goods.xml
@@ -5,13 +5,17 @@
               android:background="@color/bg_gray"
               android:orientation="vertical">
 
+    <include layout="@layout/view_header_tv_tv"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_service_good"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="9"/>
+
     <View
-       style="@style/XYLine"/>
+        style="@style/XYLine"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
