--- a/app/src/main/res/layout/fragment_sugges.xml
+++ b/app/src/main/res/layout/fragment_sugges.xml
@@ -33,6 +33,7 @@
             android:textSize="@dimen/tv_Normal"/>
 
         <Button
+            android:id="@+id/bt_submit"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginTop="25dp"
